--- a/src/App.css
+++ b/src/App.css
@@ -14,112 +14,90 @@
   height: var(--size-container);
   width: var(--size-container);
   border-radius: 50%;
+  transition: background-color 300ms linear;
 }
 
 .icon-container {
   cursor: pointer;
 }
 
-.icon-container:hover {
-  animation-name: contentBackground;
-  animation-timing-function: linear;
-  animation-duration: 300ms;
+.hovered {
+  background-color: rgba(65, 137, 230, 0.1);
 }
 
-.icon path,
-.icon-container:hover {
+.star-fill-smaller {
+  opacity: 0;
+  transition: opacity 300ms linear 300ms;
+}
+
+.hovered .star-fill-smaller {
+  opacity: 1;
+  animation-name: motionSmaller;
+  animation-timing-function: linear;
+  animation-duration: 600ms;
+  animation-delay: 300ms;
   animation-fill-mode: forwards;
 }
-.icon .star-fill-smaller {
-  opacity: 0;
-}
 
-.icon:hover .star-fill-smaller {
-  animation-name: opacitySmaller, motionSmaller;
+.not-hovered .star-fill-smaller {
+  transition: opacity 300ms linear 0ms;
+  animation-name: motionSmallerReverse;
   animation-timing-function: linear;
-  animation-duration: 300ms, 900ms;
-  animation-delay: 0ms 300ms;
+  animation-duration: 300ms;
+  animation-delay: 0;
+  animation-fill-mode: forwards;
 }
 
-.icon:hover .star-fill {
-  animation-name: fillColor, scaleUp;
-  animation-timing-function: ease-in;
-  animation-duration: 300ms, 600ms;
-  animation-delay: 0ms, 300ms;
+.star-fill {
+  transition: fill 300ms linear, transform 600ms ease-in 300ms;
+  transform-origin: var(--size-container) 5%;
 }
 
-.icon:hover .star-outline {
-  animation-name: outlineColor, scaleDownMove;
-  animation-timing-function: ease-in;
-  animation-duration: 300ms, 600ms;
-  animation-delay: 0ms, 300ms;
+.hovered .star-fill {
+  fill: rgba(52, 131, 250, 1);
+  transform: scale(2.9);
 }
 
-@keyframes contentBackground {
-  to {
-    background-color: rgba(65, 137, 230, 0.1);
-  }
+.not-hovered .star-fill {
+  transition: transform 300ms ease-in;
 }
 
-@keyframes fillColor {
-  0% {
-    fill: #737373;
-  }
-  100% {
-    fill: rgba(52, 131, 250, 1);
-  }
+.star-outline {
+  transition: stroke 300ms linear, fill 300ms linear, transform 600ms ease-in 300ms;
+  transform-origin: 5% 95%;
 }
 
-@keyframes outlineColor {
-  0% {
-    stroke: #737373;
-    fill: #737373;
-  }
-  100% {
-    stroke: rgba(52, 131, 250, 1);
-    fill: rgba(52, 131, 250, 1);
-  }
+.hovered .star-outline {
+  stroke: rgba(52, 131, 250, 1);
+  fill: rgba(52, 131, 250, 1);
+  transform: scale(0.3);
 }
 
-@keyframes scaleUp {
-  0% {
-    transform: scale(1);
-    transform-origin: var(--size-container) 5%;
-  }
-  100% {
-    transform: scale(2.9);
-    transform-origin: var(--size-container) 5%;
-  }
+.not-hovered .star-outline {
+  transition: transform 300ms ease-in;
 }
 
-@keyframes scaleDownMove {
-  0% {
-    transform: scale(1);
-    transform-origin: 5% 95%;
-  }
-  100% {
-    transform: scale(0.3);
-    transform-origin: 5% 95%;
-  }
-}
-
-@keyframes opacitySmaller {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
 
 @keyframes motionSmaller {
   0% {
     transform: translate(0, 0);
   }
+
   50% {
     transform: translateX(7.5px);
   }
+
   100% {
     transform: translate(5px, -5px);
+  }
+}
+
+
+@keyframes motionSmallerReverse {
+  0% {
+    transform: translate(5px, -5px);
+  }
+  100% {
+    transform: translate(0, 0);
   }
 }
